# kmq

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile.am  README.md  autogen.sh  base64.h  broker.ini  code-quality-reviewer-prompt.md  configure.ac  heap.h  http.h  implementer-prompt-task2.md  implementer-prompt.md  ini.h  log.h  map.h  mqtt.h  mqtt_broker.c  mqtt_broker.h  mqtt_cli.h  mqtt_cli_test.c  mqtt_mempool.h  mqtt_proxy.c  mqtt_proxy.go  mqtt_pub.c  mqtt_sn_cli.h  mqtt_sn_cli_test.c  mqtt_sn_gateway.c  mqtt_sn_pub.c  mqtt_sn_sub.c  mqtt_sub.c  mqtt_test.c  proxy.cert  proxy.ini  proxy.key  queue.h  rbtree.h  refactor_b.py  (+5 more)
.devcontainer/: Dockerfile  devcontainer.json
docs/superpowers/: 2026-06-03-mqtt-broker-refactor-design.md
docs/superpowers/plans/: 2026-06-03-mqtt-broker-refactor.md
